[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
name = "poppler"
license = "GPLv2"
version = "0.1.0"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/mbr/poppler-rs"

[dependencies]
cairo-rs = "0.3.0"
cairo-sys-rs = "0.5.0"
glib = "0.4.0"
glib-sys = "0.5.0"
gobject-sys = "0.5.0"
